--- a/package.json
+++ b/package.json
@@ -37,7 +37,13 @@
         "@rollup/plugin-babel": "^6.0.4",
         "@rollup/plugin-commonjs": "^25.0.7",
         "@rollup/plugin-node-resolve": "^15.2.3",
+        "@types/lodash-es": "^4.17.10",
+        "babel-core": "^6.26.3",
+        "babel-loader": "^9.1.3",
+        "babel-preset-env": "^1.7.0",
+        "babel-preset-stage-3": "^6.24.1",
         "cross-env": "^7.0.3",
+        "lodash-es": "^4.17.21",
         "rollup": "^4.1.4",
         "rollup-plugin-dts": "^6.1.0",
         "rollup-plugin-terser": "^7.0.2",
