--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "vue3-hooks-collection",
-    "version": "0.1.2",
+    "version": "0.1.4",
     "description": "vue3的hooks合集",
     "type": "module",
     "private": false,
@@ -10,8 +10,7 @@
     "types": "build/index.d.ts",
     "scripts": {
         "dev": "rollup -c --watch",
-        "build": "cross-env NODE_ENV=production rollup -c",
-        "publish": "npm publish"
+        "build": "cross-env NODE_ENV=production rollup -c"
     },
     "files": [
         "build"
